// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli test by import should handle JSON output option 1`] = `
"[
  {
    "availabilityZone": "us-east-1c",
    "instanceType": "t3a.nano",
    "platform": "Linux/UNIX",
    "architectures": [
      "x86_64"
    ],
    "spotPrice": 0.0021,
    "timestamp": "2024-05-15T17:09:49.000Z",
    "vCpu": 2,
    "memoryGiB": 0.5
  },
  {
    "availabilityZone": "us-east-1c",
    "instanceType": "t3a.nano",
    "platform": "SUSE Linux",
    "architectures": [
      "x86_64"
    ],
    "spotPrice": 0.0021,
    "timestamp": "2024-05-15T17:09:49.000Z",
    "vCpu": 2,
    "memoryGiB": 0.5
  },
  {
    "availabilityZone": "us-east-1d",
    "instanceType": "t3.nano",
    "platform": "Linux/UNIX",
    "architectures": [
      "x86_64"
    ],
    "spotPrice": 0.0023,
    "timestamp": "2024-05-15T19:02:55.000Z",
    "vCpu": 2,
    "memoryGiB": 0.5
  },
  {
    "availabilityZone": "us-east-1d",
    "instanceType": "t3.nano",
    "platform": "SUSE Linux",
    "architectures": [
      "x86_64"
    ],
    "spotPrice": 0.0023,
    "timestamp": "2024-05-15T19:02:55.000Z",
    "vCpu": 2,
    "memoryGiB": 0.5
  },
  {
    "availabilityZone": "us-east-1f",
    "instanceType": "t3.nano",
    "platform": "Linux/UNIX",
    "architectures": [
      "x86_64"
    ],
    "spotPrice": 0.0023,
    "timestamp": "2024-05-16T00:17:19.000Z",
    "vCpu": 2,
    "memoryGiB": 0.5
  },
  {
    "availabilityZone": "us-east-1f",
    "instanceType": "t3.nano",
    "platform": "SUSE Linux",
    "architectures": [
      "x86_64"
    ],
    "spotPrice": 0.0023,
    "timestamp": "2024-05-16T00:17:19.000Z",
    "vCpu": 2,
    "memoryGiB": 0.5
  },
  {
    "availabilityZone": "us-east-1a",
    "instanceType": "t3a.nano",
    "platform": "Linux/UNIX",
    "architectures": [
      "x86_64"
    ],
    "spotPrice": 0.0023,
    "timestamp": "2024-05-15T17:09:49.000Z",
    "vCpu": 2,
    "memoryGiB": 0.5
  },
  {
    "availabilityZone": "us-east-1a",
    "instanceType": "t3a.nano",
    "platform": "SUSE Linux",
    "architectures": [
      "x86_64"
    ],
    "spotPrice": 0.0023,
    "timestamp": "2024-05-15T17:09:49.000Z",
    "vCpu": 2,
    "memoryGiB": 0.5
  },
  {
    "availabilityZone": "us-east-1c",
    "instanceType": "t3.nano",
    "platform": "Linux/UNIX",
    "architectures": [
      "x86_64"
    ],
    "spotPrice": 0.0024,
    "timestamp": "2024-05-16T03:47:25.000Z",
    "vCpu": 2,
    "memoryGiB": 0.5
  },
  {
    "availabilityZone": "us-east-1c",
    "instanceType": "t3.nano",
    "platform": "SUSE Linux",
    "architectures": [
      "x86_64"
    ],
    "spotPrice": 0.0024,
    "timestamp": "2024-05-16T03:47:25.000Z",
    "vCpu": 2,
    "memoryGiB": 0.5
  }
]"
`;

exports[`cli test by import should handle instance family option 1`] = `
"╔══════════╤════════╤════════════╤══════════════╤═══════════════════╗
║ Type     │  Price │ Platform   │ Architecture │ Availability Zone ║
╟──────────┼────────┼────────────┼──────────────┼───────────────────╢
║ t4g.nano │ 0.0006 │ Linux/UNIX │ arm64        │ ap-northeast-3b   ║
║ t4g.nano │ 0.0006 │ SUSE Linux │ arm64        │ ap-northeast-3b   ║
║ t4g.nano │ 0.0006 │ Linux/UNIX │ arm64        │ ap-northeast-3c   ║
║ t4g.nano │ 0.0006 │ SUSE Linux │ arm64        │ ap-northeast-3c   ║
║ t4g.nano │ 0.0007 │ Linux/UNIX │ arm64        │ ap-northeast-3a   ║
║ t4g.nano │ 0.0007 │ SUSE Linux │ arm64        │ ap-northeast-3a   ║
║ t3.nano  │ 0.0010 │ Linux/UNIX │ x86_64       │ us-west-2a        ║
║ t3.nano  │ 0.0010 │ SUSE Linux │ x86_64       │ us-west-2a        ║
║ t3.nano  │ 0.0010 │ Linux/UNIX │ x86_64       │ us-west-2b        ║
║ t3.nano  │ 0.0010 │ SUSE Linux │ x86_64       │ us-west-2b        ║
║ t4g.nano │ 0.0010 │ Linux/UNIX │ arm64        │ sa-east-1a        ║
║ t4g.nano │ 0.0010 │ SUSE Linux │ arm64        │ sa-east-1a        ║
║ t4g.nano │ 0.0010 │ Linux/UNIX │ arm64        │ sa-east-1b        ║
║ t4g.nano │ 0.0010 │ SUSE Linux │ arm64        │ sa-east-1b        ║
║ t3.nano  │ 0.0012 │ Linux/UNIX │ x86_64       │ us-west-2c        ║
║ t3.nano  │ 0.0012 │ SUSE Linux │ x86_64       │ us-west-2c        ║
║ t3.nano  │ 0.0012 │ Linux/UNIX │ x86_64       │ us-west-2d        ║
║ t3.nano  │ 0.0012 │ SUSE Linux │ x86_64       │ us-west-2d        ║
║ t3a.nano │ 0.0012 │ Linux/UNIX │ x86_64       │ us-west-2d        ║
║ t3a.nano │ 0.0012 │ SUSE Linux │ x86_64       │ us-west-2d        ║
╚══════════╧════════╧════════════╧══════════════╧═══════════════════╝
"
`;

exports[`cli test by import should handle no ec2 info found should return expected values 1`] = `
"╔══════════╤════════╤══════╤═════╤════════════╤══════════════╤═══════════════════╤═══════════════════════════╗
║ Type     │  Price │ vCPU │ RAM │ Platform   │ Architecture │ Availability Zone │ Region                    ║
╟──────────┼────────┼──────┼─────┼────────────┼──────────────┼───────────────────┼───────────────────────────╢
║ t4g.nano │ 0.0006 │    2 │ 0.5 │ Linux/UNIX │ arm64        │ ap-northeast-3b   │ Asia Pacific (Osaka)      ║
║ t4g.nano │ 0.0006 │    2 │ 0.5 │ SUSE Linux │ arm64        │ ap-northeast-3b   │ Asia Pacific (Osaka)      ║
║ t4g.nano │ 0.0006 │    2 │ 0.5 │ Linux/UNIX │ arm64        │ ap-northeast-3c   │ Asia Pacific (Osaka)      ║
║ t4g.nano │ 0.0006 │    2 │ 0.5 │ SUSE Linux │ arm64        │ ap-northeast-3c   │ Asia Pacific (Osaka)      ║
║ t4g.nano │ 0.0007 │    2 │ 0.5 │ Linux/UNIX │ arm64        │ ap-northeast-3a   │ Asia Pacific (Osaka)      ║
║ t4g.nano │ 0.0007 │    2 │ 0.5 │ SUSE Linux │ arm64        │ ap-northeast-3a   │ Asia Pacific (Osaka)      ║
║ t3.nano  │ 0.0010 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ us-west-2a        │ US West (Oregon)          ║
║ t3.nano  │ 0.0010 │    2 │ 0.5 │ SUSE Linux │ x86_64       │ us-west-2a        │ US West (Oregon)          ║
║ t3.nano  │ 0.0010 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ us-west-2b        │ US West (Oregon)          ║
║ t3.nano  │ 0.0010 │    2 │ 0.5 │ SUSE Linux │ x86_64       │ us-west-2b        │ US West (Oregon)          ║
║ t4g.nano │ 0.0010 │    2 │ 0.5 │ Linux/UNIX │ arm64        │ sa-east-1a        │ South America (Sao Paulo) ║
║ t4g.nano │ 0.0010 │    2 │ 0.5 │ SUSE Linux │ arm64        │ sa-east-1a        │ South America (Sao Paulo) ║
║ t4g.nano │ 0.0010 │    2 │ 0.5 │ Linux/UNIX │ arm64        │ sa-east-1b        │ South America (Sao Paulo) ║
║ t4g.nano │ 0.0010 │    2 │ 0.5 │ SUSE Linux │ arm64        │ sa-east-1b        │ South America (Sao Paulo) ║
║ t3.nano  │ 0.0012 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ us-west-2c        │ US West (Oregon)          ║
║ t3.nano  │ 0.0012 │    2 │ 0.5 │ SUSE Linux │ x86_64       │ us-west-2c        │ US West (Oregon)          ║
║ t3.nano  │ 0.0012 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ us-west-2d        │ US West (Oregon)          ║
║ t3.nano  │ 0.0012 │    2 │ 0.5 │ SUSE Linux │ x86_64       │ us-west-2d        │ US West (Oregon)          ║
║ t3a.nano │ 0.0012 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ us-west-2d        │ US West (Oregon)          ║
║ t3a.nano │ 0.0012 │    2 │ 0.5 │ SUSE Linux │ x86_64       │ us-west-2d        │ US West (Oregon)          ║
╚══════════╧════════╧══════╧═════╧════════════╧══════════════╧═══════════════════╧═══════════════════════════╝
"
`;

exports[`cli test by import should print help 1`] = `
"aws-spot-price

get current AWS spot instance prices

Options:
      --version             Show version number                        [boolean]
      --help                Show help                                  [boolean]
      --ui                  Start with UI mode        [boolean] [default: false]
  -r, --region              AWS regions.
          [array] [choices: "us-east-1", "us-east-2", "af-south-1", "ap-east-1",
         "ap-northeast-1", "ap-northeast-2", "ap-northeast-3", "ap-southeast-1",
              "ap-southeast-2", "ap-southeast-3", "ap-southeast-4", "ca-west-1",
         "us-west-1", "us-west-2", "ap-south-1", "ap-south-2", "ap-southeast-5",
     "ca-central-1", "eu-central-1", "eu-central-2", "eu-north-1", "eu-south-1",
            "eu-south-2", "eu-west-1", "eu-west-2", "eu-west-3", "il-central-1",
                                      "me-central-1", "me-south-1", "sa-east-1"]
  -i, --instanceType        EC2 type
           [array] [choices: "a1.medium", "a1.large", "a1.xlarge", "a1.2xlarge",
        "a1.4xlarge", "a1.metal", "t1.micro", "t2.nano", "t2.micro", "t2.small",
      "t2.medium", "t2.large", "t2.xlarge", "t2.2xlarge", "t3.nano", "t3.micro",
     "t3.small", "t3.medium", "t3.large", "t3.xlarge", "t3.2xlarge", "t3a.nano",
              "t3a.micro", "t3a.small", "t3a.medium", "t3a.large", "t3a.xlarge",
              "t3a.2xlarge", "t4g.nano", "t4g.micro", "t4g.small", "t4g.medium",
  "t4g.large", "t4g.xlarge", "t4g.2xlarge", "m1.small", "m1.medium", "m1.large",
  "m1.xlarge", "m2.xlarge", "m2.2xlarge", "m2.4xlarge", "m3.medium", "m3.large",
               "m3.xlarge", "m3.2xlarge", "m4.xlarge", "m4.large", "m4.2xlarge",
            "m4.4xlarge", "m4.10xlarge", "m4.16xlarge", "m5.large", "m5.xlarge",
         "m5.2xlarge", "m5.4xlarge", "m5.8xlarge", "m5.12xlarge", "m5.16xlarge",
            "m5.24xlarge", "m5.metal", "m5a.large", "m5a.xlarge", "m5a.2xlarge",
   "m5a.4xlarge", "m5a.8xlarge", "m5a.12xlarge", "m5a.16xlarge", "m5a.24xlarge",
    "m5ad.large", "m5ad.xlarge", "m5ad.2xlarge", "m5ad.4xlarge", "m5ad.8xlarge",
   "m5ad.12xlarge", "m5ad.16xlarge", "m5ad.24xlarge", "m5d.large", "m5d.xlarge",
    "m5d.2xlarge", "m5d.4xlarge", "m5d.8xlarge", "m5d.12xlarge", "m5d.16xlarge",
       "m5d.24xlarge", "m5d.metal", "m5dn.large", "m5dn.xlarge", "m5dn.2xlarge",
               "m5dn.4xlarge", "m5dn.8xlarge", "m5dn.12xlarge", "m5dn.16xlarge",
        "m5dn.24xlarge", "m5dn.metal", "m5n.large", "m5n.xlarge", "m5n.2xlarge",
   "m5n.4xlarge", "m5n.8xlarge", "m5n.12xlarge", "m5n.16xlarge", "m5n.24xlarge",
       "m5n.metal", "m5zn.large", "m5zn.xlarge", "m5zn.2xlarge", "m5zn.3xlarge",
       "m5zn.6xlarge", "m5zn.12xlarge", "m5zn.metal", "m6a.large", "m6a.xlarge",
    "m6a.2xlarge", "m6a.4xlarge", "m6a.8xlarge", "m6a.12xlarge", "m6a.16xlarge",
      "m6a.24xlarge", "m6a.32xlarge", "m6a.48xlarge", "m6a.metal", "m6g.medium",
         "m6g.large", "m6g.xlarge", "m6g.2xlarge", "m6g.4xlarge", "m6g.8xlarge",
       "m6g.12xlarge", "m6g.16xlarge", "m6g.metal", "m6gd.medium", "m6gd.large",
                  "m6gd.xlarge", "m6gd.2xlarge", "m6gd.4xlarge", "m6gd.8xlarge",
      "m6gd.12xlarge", "m6gd.16xlarge", "m6gd.metal", "m6i.large", "m6i.xlarge",
    "m6i.2xlarge", "m6i.4xlarge", "m6i.8xlarge", "m6i.12xlarge", "m6i.16xlarge",
       "m6i.24xlarge", "m6i.32xlarge", "m6i.metal", "m6id.large", "m6id.xlarge",
                "m6id.2xlarge", "m6id.4xlarge", "m6id.8xlarge", "m6id.12xlarge",
                "m6id.16xlarge", "m6id.24xlarge", "m6id.32xlarge", "m6id.metal",
                "m6idn.large", "m6idn.xlarge", "m6idn.2xlarge", "m6idn.4xlarge",
          "m6idn.8xlarge", "m6idn.12xlarge", "m6idn.16xlarge", "m6idn.24xlarge",
   "m6idn.32xlarge", "m6idn.metal", "m6in.large", "m6in.xlarge", "m6in.2xlarge",
               "m6in.4xlarge", "m6in.8xlarge", "m6in.12xlarge", "m6in.16xlarge",
      "m6in.24xlarge", "m6in.32xlarge", "m6in.metal", "m7a.medium", "m7a.large",
      "m7a.xlarge", "m7a.2xlarge", "m7a.4xlarge", "m7a.8xlarge", "m7a.12xlarge",
                 "m7a.16xlarge", "m7a.24xlarge", "m7a.32xlarge", "m7a.48xlarge",
       "m7a.metal-48xl", "m7g.medium", "m7g.large", "m7g.xlarge", "m7g.2xlarge",
      "m7g.4xlarge", "m7g.8xlarge", "m7g.12xlarge", "m7g.16xlarge", "m7g.metal",
     "m7gd.medium", "m7gd.large", "m7gd.xlarge", "m7gd.2xlarge", "m7gd.4xlarge",
    "m7gd.8xlarge", "m7gd.12xlarge", "m7gd.16xlarge", "m7gd.metal", "m7i.large",
      "m7i.xlarge", "m7i.2xlarge", "m7i.4xlarge", "m7i.8xlarge", "m7i.12xlarge",
               "m7i.16xlarge", "m7i.24xlarge", "m7i.48xlarge", "m7i.metal-24xl",
      "m7i.metal-48xl", "m7i-flex.large", "m7i-flex.xlarge", "m7i-flex.2xlarge",
              "m7i-flex.4xlarge", "m7i-flex.8xlarge", "m8g.medium", "m8g.large",
      "m8g.xlarge", "m8g.2xlarge", "m8g.4xlarge", "m8g.8xlarge", "m8g.12xlarge",
               "m8g.16xlarge", "m8g.24xlarge", "m8g.48xlarge", "m8g.metal-24xl",
             "m8g.metal-48xl", "mac1.metal", "mac2.metal", "mac2-m1ultra.metal",
      "mac2-m2.metal", "mac2-m2pro.metal", "c1.medium", "c1.xlarge", "c3.large",
              "c3.xlarge", "c3.2xlarge", "c3.4xlarge", "c3.8xlarge", "c4.large",
              "c4.xlarge", "c4.2xlarge", "c4.4xlarge", "c4.8xlarge", "c5.large",
           "c5.xlarge", "c5.2xlarge", "c5.4xlarge", "c5.9xlarge", "c5.12xlarge",
            "c5.18xlarge", "c5.24xlarge", "c5.metal", "c5a.large", "c5a.xlarge",
    "c5a.2xlarge", "c5a.4xlarge", "c5a.8xlarge", "c5a.12xlarge", "c5a.16xlarge",
    "c5a.24xlarge", "c5ad.large", "c5ad.xlarge", "c5ad.2xlarge", "c5ad.4xlarge",
              "c5ad.8xlarge", "c5ad.12xlarge", "c5ad.16xlarge", "c5ad.24xlarge",
         "c5d.large", "c5d.xlarge", "c5d.2xlarge", "c5d.4xlarge", "c5d.9xlarge",
       "c5d.12xlarge", "c5d.18xlarge", "c5d.24xlarge", "c5d.metal", "c5n.large",
      "c5n.xlarge", "c5n.2xlarge", "c5n.4xlarge", "c5n.9xlarge", "c5n.18xlarge",
           "c5n.metal", "c6a.large", "c6a.xlarge", "c6a.2xlarge", "c6a.4xlarge",
  "c6a.8xlarge", "c6a.12xlarge", "c6a.16xlarge", "c6a.24xlarge", "c6a.32xlarge",
           "c6a.48xlarge", "c6a.metal", "c6g.medium", "c6g.large", "c6g.xlarge",
    "c6g.2xlarge", "c6g.4xlarge", "c6g.8xlarge", "c6g.12xlarge", "c6g.16xlarge",
        "c6g.metal", "c6gd.medium", "c6gd.large", "c6gd.xlarge", "c6gd.2xlarge",
               "c6gd.4xlarge", "c6gd.8xlarge", "c6gd.12xlarge", "c6gd.16xlarge",
       "c6gd.metal", "c6gn.medium", "c6gn.large", "c6gn.xlarge", "c6gn.2xlarge",
  "c6gn.4xlarge", "c6gn.8xlarge", "c6gn.12xlarge", "c6gn.16xlarge", "c6i.large",
      "c6i.xlarge", "c6i.2xlarge", "c6i.4xlarge", "c6i.8xlarge", "c6i.12xlarge",
      "c6i.16xlarge", "c6i.24xlarge", "c6i.32xlarge", "c6i.metal", "c6id.large",
                  "c6id.xlarge", "c6id.2xlarge", "c6id.4xlarge", "c6id.8xlarge",
             "c6id.12xlarge", "c6id.16xlarge", "c6id.24xlarge", "c6id.32xlarge",
      "c6id.metal", "c6in.large", "c6in.xlarge", "c6in.2xlarge", "c6in.4xlarge",
              "c6in.8xlarge", "c6in.12xlarge", "c6in.16xlarge", "c6in.24xlarge",
         "c6in.32xlarge", "c6in.metal", "c7a.medium", "c7a.large", "c7a.xlarge",
    "c7a.2xlarge", "c7a.4xlarge", "c7a.8xlarge", "c7a.12xlarge", "c7a.16xlarge",
               "c7a.24xlarge", "c7a.32xlarge", "c7a.48xlarge", "c7a.metal-48xl",
          "c7g.medium", "c7g.large", "c7g.xlarge", "c7g.2xlarge", "c7g.4xlarge",
      "c7g.8xlarge", "c7g.12xlarge", "c7g.16xlarge", "c7g.metal", "c7gd.medium",
    "c7gd.large", "c7gd.xlarge", "c7gd.2xlarge", "c7gd.4xlarge", "c7gd.8xlarge",
    "c7gd.12xlarge", "c7gd.16xlarge", "c7gd.metal", "c7gn.medium", "c7gn.large",
                  "c7gn.xlarge", "c7gn.2xlarge", "c7gn.4xlarge", "c7gn.8xlarge",
      "c7gn.12xlarge", "c7gn.16xlarge", "c7gn.metal", "c7i.large", "c7i.xlarge",
    "c7i.2xlarge", "c7i.4xlarge", "c7i.8xlarge", "c7i.12xlarge", "c7i.16xlarge",
             "c7i.24xlarge", "c7i.48xlarge", "c7i.metal-24xl", "c7i.metal-48xl",
    "c7i-flex.large", "c7i-flex.xlarge", "c7i-flex.2xlarge", "c7i-flex.4xlarge",
     "c7i-flex.8xlarge", "c8g.medium", "c8g.large", "c8g.xlarge", "c8g.2xlarge",
   "c8g.4xlarge", "c8g.8xlarge", "c8g.12xlarge", "c8g.16xlarge", "c8g.24xlarge",
              "c8g.48xlarge", "c8g.metal-24xl", "c8g.metal-48xl", "cc1.4xlarge",
             "cc2.8xlarge", "r3.large", "r3.xlarge", "r3.2xlarge", "r3.4xlarge",
              "r3.8xlarge", "r4.large", "r4.xlarge", "r4.2xlarge", "r4.4xlarge",
             "r4.8xlarge", "r4.16xlarge", "r5.large", "r5.xlarge", "r5.2xlarge",
        "r5.4xlarge", "r5.8xlarge", "r5.12xlarge", "r5.16xlarge", "r5.24xlarge",
            "r5.metal", "r5a.large", "r5a.xlarge", "r5a.2xlarge", "r5a.4xlarge",
    "r5a.8xlarge", "r5a.12xlarge", "r5a.16xlarge", "r5a.24xlarge", "r5ad.large",
                  "r5ad.xlarge", "r5ad.2xlarge", "r5ad.4xlarge", "r5ad.8xlarge",
   "r5ad.12xlarge", "r5ad.16xlarge", "r5ad.24xlarge", "r5b.large", "r5b.xlarge",
    "r5b.2xlarge", "r5b.4xlarge", "r5b.8xlarge", "r5b.12xlarge", "r5b.16xlarge",
          "r5b.24xlarge", "r5b.metal", "r5d.large", "r5d.xlarge", "r5d.2xlarge",
   "r5d.4xlarge", "r5d.8xlarge", "r5d.12xlarge", "r5d.16xlarge", "r5d.24xlarge",
       "r5d.metal", "r5dn.large", "r5dn.xlarge", "r5dn.2xlarge", "r5dn.4xlarge",
              "r5dn.8xlarge", "r5dn.12xlarge", "r5dn.16xlarge", "r5dn.24xlarge",
          "r5dn.metal", "r5n.large", "r5n.xlarge", "r5n.2xlarge", "r5n.4xlarge",
     "r5n.8xlarge", "r5n.12xlarge", "r5n.16xlarge", "r5n.24xlarge", "r5n.metal",
         "r6a.xlarge", "r6a.large", "r6a.2xlarge", "r6a.4xlarge", "r6a.8xlarge",
                 "r6a.12xlarge", "r6a.16xlarge", "r6a.24xlarge", "r6a.32xlarge",
           "r6a.48xlarge", "r6a.metal", "r6g.medium", "r6g.large", "r6g.xlarge",
    "r6g.2xlarge", "r6g.4xlarge", "r6g.8xlarge", "r6g.12xlarge", "r6g.16xlarge",
        "r6g.metal", "r6gd.medium", "r6gd.large", "r6gd.xlarge", "r6gd.2xlarge",
               "r6gd.4xlarge", "r6gd.8xlarge", "r6gd.12xlarge", "r6gd.16xlarge",
          "r6gd.metal", "r6i.large", "r6i.xlarge", "r6i.2xlarge", "r6i.4xlarge",
  "r6i.8xlarge", "r6i.12xlarge", "r6i.16xlarge", "r6i.24xlarge", "r6i.32xlarge",
       "r6i.metal", "r6id.large", "r6id.xlarge", "r6id.2xlarge", "r6id.4xlarge",
              "r6id.8xlarge", "r6id.12xlarge", "r6id.16xlarge", "r6id.24xlarge",
  "r6id.32xlarge", "r6id.metal", "r6idn.large", "r6idn.xlarge", "r6idn.2xlarge",
           "r6idn.4xlarge", "r6idn.8xlarge", "r6idn.12xlarge", "r6idn.16xlarge",
                "r6idn.24xlarge", "r6idn.32xlarge", "r6idn.metal", "r6in.large",
                  "r6in.xlarge", "r6in.2xlarge", "r6in.4xlarge", "r6in.8xlarge",
             "r6in.12xlarge", "r6in.16xlarge", "r6in.24xlarge", "r6in.32xlarge",
           "r6in.metal", "r7a.medium", "r7a.large", "r7a.xlarge", "r7a.2xlarge",
   "r7a.4xlarge", "r7a.8xlarge", "r7a.12xlarge", "r7a.16xlarge", "r7a.24xlarge",
    "r7a.32xlarge", "r7a.48xlarge", "r7a.metal-48xl", "r7g.medium", "r7g.large",
      "r7g.xlarge", "r7g.2xlarge", "r7g.4xlarge", "r7g.8xlarge", "r7g.12xlarge",
        "r7g.16xlarge", "r7g.metal", "r7gd.medium", "r7gd.large", "r7gd.xlarge",
                "r7gd.2xlarge", "r7gd.4xlarge", "r7gd.8xlarge", "r7gd.12xlarge",
        "r7gd.16xlarge", "r7gd.metal", "r7i.large", "r7i.xlarge", "r7i.2xlarge",
   "r7i.4xlarge", "r7i.8xlarge", "r7i.12xlarge", "r7i.16xlarge", "r7i.24xlarge",
               "r7i.48xlarge", "r7i.metal-24xl", "r7i.metal-48xl", "r7iz.large",
                  "r7iz.xlarge", "r7iz.2xlarge", "r7iz.4xlarge", "r7iz.8xlarge",
           "r7iz.12xlarge", "r7iz.16xlarge", "r7iz.32xlarge", "r7iz.metal-16xl",
      "r7iz.metal-32xl", "r8g.medium", "r8g.large", "r8g.xlarge", "r8g.2xlarge",
   "r8g.4xlarge", "r8g.8xlarge", "r8g.12xlarge", "r8g.16xlarge", "r8g.24xlarge",
        "r8g.48xlarge", "r8g.metal-24xl", "r8g.metal-48xl", "u-12tb1.112xlarge",
     "u-12tb1.metal", "u-18tb1.112xlarge", "u-18tb1.metal", "u-24tb1.112xlarge",
      "u-24tb1.metal", "u-3tb1.56xlarge", "u-6tb1.56xlarge", "u-6tb1.112xlarge",
       "u-6tb1.metal", "u-9tb1.112xlarge", "u-9tb1.metal", "u7i-12tb.224xlarge",
            "u7ib-12tb.224xlarge", "u7in-16tb.224xlarge", "u7in-24tb.224xlarge",
              "u7in-32tb.224xlarge", "x1.16xlarge", "x1.32xlarge", "x1e.xlarge",
    "x1e.2xlarge", "x1e.4xlarge", "x1e.8xlarge", "x1e.16xlarge", "x1e.32xlarge",
     "x2gd.medium", "x2gd.large", "x2gd.xlarge", "x2gd.2xlarge", "x2gd.4xlarge",
                 "x2gd.8xlarge", "x2gd.12xlarge", "x2gd.16xlarge", "x2gd.metal",
            "x2idn.16xlarge", "x2idn.24xlarge", "x2idn.32xlarge", "x2idn.metal",
          "x2iedn.xlarge", "x2iedn.2xlarge", "x2iedn.4xlarge", "x2iedn.8xlarge",
        "x2iedn.16xlarge", "x2iedn.24xlarge", "x2iedn.32xlarge", "x2iedn.metal",
         "x2iezn.2xlarge", "x2iezn.4xlarge", "x2iezn.6xlarge", "x2iezn.8xlarge",
     "x2iezn.12xlarge", "x2iezn.metal", "x8g.medium", "x8g.large", "x8g.xlarge",
    "x8g.2xlarge", "x8g.4xlarge", "x8g.8xlarge", "x8g.12xlarge", "x8g.16xlarge",
             "x8g.24xlarge", "x8g.48xlarge", "x8g.metal-24xl", "x8g.metal-48xl",
         "z1d.large", "z1d.xlarge", "z1d.2xlarge", "z1d.3xlarge", "z1d.6xlarge",
          "z1d.12xlarge", "z1d.metal", "cr1.8xlarge", "d2.xlarge", "d2.2xlarge",
            "d2.4xlarge", "d2.8xlarge", "d3.xlarge", "d3.2xlarge", "d3.4xlarge",
    "d3.8xlarge", "d3en.xlarge", "d3en.2xlarge", "d3en.4xlarge", "d3en.6xlarge",
      "d3en.8xlarge", "d3en.12xlarge", "h1.2xlarge", "h1.4xlarge", "h1.8xlarge",
         "h1.16xlarge", "hi1.4xlarge", "hs1.8xlarge", "i2.xlarge", "i2.2xlarge",
              "i2.4xlarge", "i2.8xlarge", "i3.large", "i3.xlarge", "i3.2xlarge",
            "i3.4xlarge", "i3.8xlarge", "i3.16xlarge", "i3.metal", "i3en.large",
                  "i3en.xlarge", "i3en.2xlarge", "i3en.3xlarge", "i3en.6xlarge",
      "i3en.12xlarge", "i3en.24xlarge", "i3en.metal", "i4g.large", "i4g.xlarge",
       "i4g.2xlarge", "i4g.4xlarge", "i4g.8xlarge", "i4g.16xlarge", "i4i.large",
      "i4i.xlarge", "i4i.2xlarge", "i4i.4xlarge", "i4i.8xlarge", "i4i.12xlarge",
     "i4i.16xlarge", "i4i.24xlarge", "i4i.32xlarge", "i4i.metal", "im4gn.large",
              "im4gn.xlarge", "im4gn.2xlarge", "im4gn.4xlarge", "im4gn.8xlarge",
             "im4gn.16xlarge", "is4gen.medium", "is4gen.large", "is4gen.xlarge",
           "is4gen.2xlarge", "is4gen.4xlarge", "is4gen.8xlarge", "dl1.24xlarge",
       "dl2q.24xlarge", "f1.2xlarge", "f1.4xlarge", "f1.16xlarge", "g2.2xlarge",
          "g2.8xlarge", "g3.4xlarge", "g3.8xlarge", "g3.16xlarge", "g3s.xlarge",
                  "g4ad.xlarge", "g4ad.2xlarge", "g4ad.4xlarge", "g4ad.8xlarge",
                 "g4ad.16xlarge", "g4dn.xlarge", "g4dn.2xlarge", "g4dn.4xlarge",
    "g4dn.8xlarge", "g4dn.12xlarge", "g4dn.16xlarge", "g4dn.metal", "g5.xlarge",
         "g5.2xlarge", "g5.4xlarge", "g5.8xlarge", "g5.12xlarge", "g5.16xlarge",
       "g5.24xlarge", "g5.48xlarge", "g5g.xlarge", "g5g.2xlarge", "g5g.4xlarge",
          "g5g.8xlarge", "g5g.16xlarge", "g5g.metal", "g6.xlarge", "g6.2xlarge",
        "g6.4xlarge", "g6.8xlarge", "g6.12xlarge", "g6.16xlarge", "g6.24xlarge",
       "g6.48xlarge", "g6e.xlarge", "g6e.2xlarge", "g6e.4xlarge", "g6e.8xlarge",
  "g6e.12xlarge", "g6e.16xlarge", "g6e.24xlarge", "g6e.48xlarge", "gr6.4xlarge",
  "gr6.8xlarge", "inf1.xlarge", "inf1.2xlarge", "inf1.6xlarge", "inf1.24xlarge",
   "inf2.xlarge", "inf2.8xlarge", "inf2.24xlarge", "inf2.48xlarge", "p2.xlarge",
         "p2.8xlarge", "p2.16xlarge", "p3.2xlarge", "p3.8xlarge", "p3.16xlarge",
                "p3dn.24xlarge", "p4d.24xlarge", "p4de.24xlarge", "p5.48xlarge",
               "trn1.2xlarge", "trn1.32xlarge", "trn1n.32xlarge", "vt1.3xlarge",
                 "vt1.6xlarge", "vt1.24xlarge", "cg1.4xlarge", "hpc6a.48xlarge",
        "hpc6id.32xlarge", "hpc7a.12xlarge", "hpc7a.24xlarge", "hpc7a.48xlarge",
           "hpc7a.96xlarge", "hpc7g.4xlarge", "hpc7g.8xlarge", "hpc7g.16xlarge"]
      --family              EC2 instance family.
                    [array] [choices: "general", "compute", "memory", "storage",
                                         "acceleratedComputing", "hpcOptimized"]
  -f, --familyType          EC2 instance family types.
       [array] [choices: "a1", "t1", "t2", "t3", "t3a", "t4g", "m1", "m2", "m3",
  "m4", "m5", "m5a", "m5ad", "m5d", "m5dn", "m5n", "m5zn", "m6a", "m6g", "m6gd",
        "m6i", "m6id", "m6idn", "m6in", "m7a", "m7g", "m7gd", "m7i", "m7i-flex",
     "m8g", "mac1", "mac2", "mac2-m1ultra", "mac2-m2", "mac2-m2pro", "c1", "c3",
   "c4", "c5", "c5a", "c5ad", "c5d", "c5n", "c6a", "c6g", "c6gd", "c6gn", "c6i",
  "c6id", "c6in", "c7a", "c7g", "c7gd", "c7gn", "c7i", "c7i-flex", "c8g", "cc1",
     "cc2", "r3", "r4", "r5", "r5a", "r5ad", "r5b", "r5d", "r5dn", "r5n", "r6a",
     "r6g", "r6gd", "r6i", "r6id", "r6idn", "r6in", "r7a", "r7g", "r7gd", "r7i",
   "r7iz", "r8g", "u-12tb1", "u-18tb1", "u-24tb1", "u-3tb1", "u-6tb1", "u-9tb1",
    "u7i-12tb", "u7ib-12tb", "u7in-16tb", "u7in-24tb", "u7in-32tb", "x1", "x1e",
   "x2gd", "x2idn", "x2iedn", "x2iezn", "x8g", "z1d", "cr1", "d2", "d3", "d3en",
        "h1", "hi1", "hs1", "i2", "i3", "i3en", "i4g", "i4i", "im4gn", "is4gen",
      "dl1", "dl2q", "f1", "g2", "g3", "g3s", "g4ad", "g4dn", "g5", "g5g", "g6",
  "g6e", "gr6", "inf1", "inf2", "p2", "p3", "p3dn", "p4d", "p4de", "p5", "trn1",
                     "trn1n", "vt1", "cg1", "hpc6a", "hpc6id", "hpc7a", "hpc7g"]
  -s, --size                EC2 instance sizes.
        [array] [choices: "nano", "micro", "small", "medium", "large", "xlarge",
   "2xlarge", "3xlarge", "4xlarge", "6xlarge", "8xlarge", "9xlarge", "10xlarge",
         "12xlarge", "16xlarge", "18xlarge", "24xlarge", "32xlarge", "48xlarge",
        "56xlarge", "96xlarge", "112xlarge", "224xlarge", "metal", "metal-16xl",
                                       "metal-24xl", "metal-32xl", "metal-48xl"]
      --minVCPU, --mc       Minimum VCPU count             [number] [default: 1]
      --minMemoryGiB, --mm  Minimum memory (GiB)         [number] [default: 0.5]
      --priceLimit, --pl    Maximum price limit          [number] [default: 100]
  -p, --platforms           Platforms. Choose \`windows\` or \`linux\` (all
                            lowercase) as wildcard.
  [array] [choices: "Linux/UNIX", "Linux/UNIX (Amazon VPC)", "SUSE Linux", "SUSE
      Linux (Amazon VPC)", "Red Hat Enterprise Linux", "Red Hat Enterprise Linux
           (Amazon VPC)", "Windows", "Windows (Amazon VPC)", "linux", "windows"]
                             [default: ["Linux/UNIX","Linux/UNIX (Amazon VPC)"]]
  -a, --architectures       Architectures
         [array] [choices: "arm64", "arm64_mac", "i386", "x86_64", "x86_64_mac"]
                   [default: ["arm64","arm64_mac","i386","x86_64","x86_64_mac"]]
  -l, --limit               Limit results output length   [number] [default: 30]
      --reduceAZ, --raz     Reduce results with cheapest Availability Zone
                            within Region              [boolean] [default: true]
  -w, --wide                Output results with detail (vCPU, memory, etc)
                                                      [boolean] [default: false]
  -j, --json                Outputs in JSON format    [boolean] [default: false]
      --accessKeyId         AWS Access Key ID.                          [string]
      --secretAccessKey     AWS Secret Access Key.                      [string]"
`;

exports[`cli test by import should return expected values if no matching records found 1`] = `"no matching records found"`;

exports[`cli test by import should return expected values with default options 1`] = `
"╔═══════════╤════════╤════════════╤══════════════╤═══════════════════╗
║ Type      │  Price │ Platform   │ Architecture │ Availability Zone ║
╟───────────┼────────┼────────────┼──────────────┼───────────────────╢
║ t4g.nano  │ 0.0006 │ Linux/UNIX │ arm64        │ ap-northeast-3b   ║
║ t3.nano   │ 0.0010 │ Linux/UNIX │ x86_64       │ us-west-2a        ║
║ t4g.nano  │ 0.0010 │ Linux/UNIX │ arm64        │ sa-east-1a        ║
║ t3a.nano  │ 0.0012 │ Linux/UNIX │ x86_64       │ us-west-2d        ║
║ t4g.nano  │ 0.0012 │ Linux/UNIX │ arm64        │ ap-south-1b       ║
║ t3a.nano  │ 0.0013 │ Linux/UNIX │ x86_64       │ ap-south-1b       ║
║ t4g.micro │ 0.0013 │ Linux/UNIX │ arm64        │ ap-northeast-3a   ║
║ t4g.micro │ 0.0013 │ Linux/UNIX │ arm64        │ sa-east-1b        ║
║ t3.micro  │ 0.0014 │ Linux/UNIX │ x86_64       │ us-west-2a        ║
║ t4g.nano  │ 0.0014 │ Linux/UNIX │ arm64        │ eu-north-1a       ║
║ t3.nano   │ 0.0015 │ Linux/UNIX │ x86_64       │ us-east-2c        ║
║ t3.nano   │ 0.0016 │ Linux/UNIX │ x86_64       │ ap-northeast-3c   ║
║ t3.nano   │ 0.0016 │ Linux/UNIX │ x86_64       │ ap-southeast-1a   ║
║ t3.nano   │ 0.0017 │ Linux/UNIX │ x86_64       │ ap-south-1b       ║
║ t3.nano   │ 0.0017 │ Linux/UNIX │ x86_64       │ sa-east-1a        ║
║ t3a.nano  │ 0.0017 │ Linux/UNIX │ x86_64       │ ap-southeast-1a   ║
║ t3a.nano  │ 0.0017 │ Linux/UNIX │ x86_64       │ us-east-2c        ║
║ t4g.nano  │ 0.0017 │ Linux/UNIX │ arm64        │ ap-northeast-2b   ║
║ t4g.nano  │ 0.0017 │ Linux/UNIX │ arm64        │ eu-central-1a     ║
║ t4g.nano  │ 0.0017 │ Linux/UNIX │ arm64        │ eu-west-3a        ║
║ t3.nano   │ 0.0018 │ Linux/UNIX │ x86_64       │ ap-northeast-2b   ║
║ t3.nano   │ 0.0018 │ Linux/UNIX │ x86_64       │ eu-central-1c     ║
║ t3.nano   │ 0.0018 │ Linux/UNIX │ x86_64       │ eu-north-1b       ║
║ t3.nano   │ 0.0018 │ Linux/UNIX │ x86_64       │ eu-west-3b        ║
║ t3a.nano  │ 0.0018 │ Linux/UNIX │ x86_64       │ ca-central-1b     ║
║ t4g.micro │ 0.0018 │ Linux/UNIX │ arm64        │ ap-south-1b       ║
║ t4g.micro │ 0.0018 │ Linux/UNIX │ arm64        │ eu-west-3a        ║
║ t4g.nano  │ 0.0018 │ Linux/UNIX │ arm64        │ us-east-2c        ║
║ t3.micro  │ 0.0019 │ Linux/UNIX │ x86_64       │ ap-northeast-2c   ║
║ t3.nano   │ 0.0020 │ Linux/UNIX │ x86_64       │ ca-central-1d     ║
╚═══════════╧════════╧════════════╧══════════════╧═══════════════════╝
"
`;

exports[`cli test by import should return expected values with instance family types and sizes 1`] = `
"╔══════════╤════════╤════════════╤══════════════╤═══════════════════╗
║ Type     │  Price │ Platform   │ Architecture │ Availability Zone ║
╟──────────┼────────┼────────────┼──────────────┼───────────────────╢
║ t4g.nano │ 0.0006 │ Linux/UNIX │ arm64        │ ap-northeast-3b   ║
║ t4g.nano │ 0.0006 │ SUSE Linux │ arm64        │ ap-northeast-3b   ║
║ t4g.nano │ 0.0006 │ Linux/UNIX │ arm64        │ ap-northeast-3c   ║
║ t4g.nano │ 0.0006 │ SUSE Linux │ arm64        │ ap-northeast-3c   ║
║ t4g.nano │ 0.0007 │ Linux/UNIX │ arm64        │ ap-northeast-3a   ║
║ t4g.nano │ 0.0007 │ SUSE Linux │ arm64        │ ap-northeast-3a   ║
║ t3.nano  │ 0.0010 │ Linux/UNIX │ x86_64       │ us-west-2a        ║
║ t3.nano  │ 0.0010 │ SUSE Linux │ x86_64       │ us-west-2a        ║
║ t3.nano  │ 0.0010 │ Linux/UNIX │ x86_64       │ us-west-2b        ║
║ t3.nano  │ 0.0010 │ SUSE Linux │ x86_64       │ us-west-2b        ║
║ t4g.nano │ 0.0010 │ Linux/UNIX │ arm64        │ sa-east-1a        ║
║ t4g.nano │ 0.0010 │ SUSE Linux │ arm64        │ sa-east-1a        ║
║ t4g.nano │ 0.0010 │ Linux/UNIX │ arm64        │ sa-east-1b        ║
║ t4g.nano │ 0.0010 │ SUSE Linux │ arm64        │ sa-east-1b        ║
║ t3.nano  │ 0.0012 │ Linux/UNIX │ x86_64       │ us-west-2c        ║
║ t3.nano  │ 0.0012 │ SUSE Linux │ x86_64       │ us-west-2c        ║
║ t3.nano  │ 0.0012 │ Linux/UNIX │ x86_64       │ us-west-2d        ║
║ t3.nano  │ 0.0012 │ SUSE Linux │ x86_64       │ us-west-2d        ║
║ t3a.nano │ 0.0012 │ Linux/UNIX │ x86_64       │ us-west-2d        ║
║ t3a.nano │ 0.0012 │ SUSE Linux │ x86_64       │ us-west-2d        ║
╚══════════╧════════╧════════════╧══════════════╧═══════════════════╝
"
`;

exports[`cli test by import should return expected values with user options 1`] = `"no matching records found"`;

exports[`cli test by import should return expected values with wide option 1`] = `
"╔═══════════╤════════╤══════╤═════╤════════════╤══════════════╤═══════════════════╤═══════════════════════════╗
║ Type      │  Price │ vCPU │ RAM │ Platform   │ Architecture │ Availability Zone │ Region                    ║
╟───────────┼────────┼──────┼─────┼────────────┼──────────────┼───────────────────┼───────────────────────────╢
║ t4g.nano  │ 0.0006 │    2 │ 0.5 │ Linux/UNIX │ arm64        │ ap-northeast-3b   │ Asia Pacific (Osaka)      ║
║ t3.nano   │ 0.0010 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ us-west-2a        │ US West (Oregon)          ║
║ t4g.nano  │ 0.0010 │    2 │ 0.5 │ Linux/UNIX │ arm64        │ sa-east-1a        │ South America (Sao Paulo) ║
║ t3a.nano  │ 0.0012 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ us-west-2d        │ US West (Oregon)          ║
║ t4g.nano  │ 0.0012 │    2 │ 0.5 │ Linux/UNIX │ arm64        │ ap-south-1b       │ Asia Pacific (Mumbai)     ║
║ t3a.nano  │ 0.0013 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ ap-south-1b       │ Asia Pacific (Mumbai)     ║
║ t4g.micro │ 0.0013 │    2 │   1 │ Linux/UNIX │ arm64        │ ap-northeast-3a   │ Asia Pacific (Osaka)      ║
║ t4g.micro │ 0.0013 │    2 │   1 │ Linux/UNIX │ arm64        │ sa-east-1b        │ South America (Sao Paulo) ║
║ t3.micro  │ 0.0014 │    2 │   1 │ Linux/UNIX │ x86_64       │ us-west-2a        │ US West (Oregon)          ║
║ t4g.nano  │ 0.0014 │    2 │ 0.5 │ Linux/UNIX │ arm64        │ eu-north-1a       │ Europe (Stockholm)        ║
║ t3.nano   │ 0.0015 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ us-east-2c        │ US East (Ohio)            ║
║ t3.nano   │ 0.0016 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ ap-northeast-3c   │ Asia Pacific (Osaka)      ║
║ t3.nano   │ 0.0016 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ ap-southeast-1a   │ Asia Pacific (Singapore)  ║
║ t3.nano   │ 0.0017 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ ap-south-1b       │ Asia Pacific (Mumbai)     ║
║ t3.nano   │ 0.0017 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ sa-east-1a        │ South America (Sao Paulo) ║
║ t3a.nano  │ 0.0017 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ ap-southeast-1a   │ Asia Pacific (Singapore)  ║
║ t3a.nano  │ 0.0017 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ us-east-2c        │ US East (Ohio)            ║
║ t4g.nano  │ 0.0017 │    2 │ 0.5 │ Linux/UNIX │ arm64        │ ap-northeast-2b   │ Asia Pacific (Seoul)      ║
║ t4g.nano  │ 0.0017 │    2 │ 0.5 │ Linux/UNIX │ arm64        │ eu-central-1a     │ Europe (Frankfurt)        ║
║ t4g.nano  │ 0.0017 │    2 │ 0.5 │ Linux/UNIX │ arm64        │ eu-west-3a        │ Europe (Paris)            ║
║ t3.nano   │ 0.0018 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ ap-northeast-2b   │ Asia Pacific (Seoul)      ║
║ t3.nano   │ 0.0018 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ eu-central-1c     │ Europe (Frankfurt)        ║
║ t3.nano   │ 0.0018 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ eu-north-1b       │ Europe (Stockholm)        ║
║ t3.nano   │ 0.0018 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ eu-west-3b        │ Europe (Paris)            ║
║ t3a.nano  │ 0.0018 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ ca-central-1b     │ Canada (Central)          ║
║ t4g.micro │ 0.0018 │    2 │   1 │ Linux/UNIX │ arm64        │ ap-south-1b       │ Asia Pacific (Mumbai)     ║
║ t4g.micro │ 0.0018 │    2 │   1 │ Linux/UNIX │ arm64        │ eu-west-3a        │ Europe (Paris)            ║
║ t4g.nano  │ 0.0018 │    2 │ 0.5 │ Linux/UNIX │ arm64        │ us-east-2c        │ US East (Ohio)            ║
║ t3.micro  │ 0.0019 │    2 │   1 │ Linux/UNIX │ x86_64       │ ap-northeast-2c   │ Asia Pacific (Seoul)      ║
║ t3.nano   │ 0.0020 │    2 │ 0.5 │ Linux/UNIX │ x86_64       │ ca-central-1d     │ Canada (Central)          ║
╚═══════════╧════════╧══════╧═════╧════════════╧══════════════╧═══════════════════╧═══════════════════════════╝
"
`;

exports[`cli test by import should return expected values with wildcard platforms 1`] = `
"╔══════════╤════════╤════════════╤══════════════╤═══════════════════╗
║ Type     │  Price │ Platform   │ Architecture │ Availability Zone ║
╟──────────┼────────┼────────────┼──────────────┼───────────────────╢
║ t3a.nano │ 0.0021 │ Linux/UNIX │ x86_64       │ us-east-1c        ║
║ t3a.nano │ 0.0021 │ SUSE Linux │ x86_64       │ us-east-1c        ║
║ t3.nano  │ 0.0023 │ Linux/UNIX │ x86_64       │ us-east-1d        ║
║ t3.nano  │ 0.0023 │ SUSE Linux │ x86_64       │ us-east-1d        ║
║ t3.nano  │ 0.0023 │ Linux/UNIX │ x86_64       │ us-east-1f        ║
║ t3.nano  │ 0.0023 │ SUSE Linux │ x86_64       │ us-east-1f        ║
║ t3a.nano │ 0.0023 │ Linux/UNIX │ x86_64       │ us-east-1a        ║
║ t3a.nano │ 0.0023 │ SUSE Linux │ x86_64       │ us-east-1a        ║
║ t3.nano  │ 0.0024 │ Linux/UNIX │ x86_64       │ us-east-1c        ║
║ t3.nano  │ 0.0024 │ SUSE Linux │ x86_64       │ us-east-1c        ║
╚══════════╧════════╧════════════╧══════════════╧═══════════════════╝

╔══════════╤════════╤══════════╤══════════════╤═══════════════════╗
║ Type     │  Price │ Platform │ Architecture │ Availability Zone ║
╟──────────┼────────┼──────────┼──────────────┼───────────────────╢
║ t3a.nano │ 0.0066 │ Windows  │ x86_64       │ us-east-1f        ║
║ t3a.nano │ 0.0067 │ Windows  │ x86_64       │ us-east-1c        ║
║ t3.nano  │ 0.0068 │ Windows  │ x86_64       │ us-east-1d        ║
║ t3a.nano │ 0.0068 │ Windows  │ x86_64       │ us-east-1b        ║
║ t3.nano  │ 0.0069 │ Windows  │ x86_64       │ us-east-1b        ║
║ t3.nano  │ 0.0069 │ Windows  │ x86_64       │ us-east-1f        ║
║ t3a.nano │ 0.0069 │ Windows  │ x86_64       │ us-east-1a        ║
║ t3a.nano │ 0.0069 │ Windows  │ x86_64       │ us-east-1d        ║
║ t3.nano  │ 0.0070 │ Windows  │ x86_64       │ us-east-1a        ║
║ t3.nano  │ 0.0070 │ Windows  │ x86_64       │ us-east-1c        ║
╚══════════╧════════╧══════════╧══════════════╧═══════════════════╝
"
`;

exports[`cli test by import ui mode should return expected result 1`] = `
"╔══════════╤════════╤════════════╤══════════════╤═══════════════════╗
║ Type     │  Price │ Platform   │ Architecture │ Availability Zone ║
╟──────────┼────────┼────────────┼──────────────┼───────────────────╢
║ c4.large │ 0.0344 │ Linux/UNIX │ x86_64       │ us-east-2c        ║
║ c4.large │ 0.0353 │ Linux/UNIX │ x86_64       │ us-east-2b        ║
║ c4.large │ 0.0376 │ Linux/UNIX │ x86_64       │ us-west-2c        ║
║ c4.large │ 0.0379 │ Linux/UNIX │ x86_64       │ us-west-2a        ║
║ c4.large │ 0.0382 │ Linux/UNIX │ x86_64       │ us-east-2a        ║
║ c4.large │ 0.0389 │ Linux/UNIX │ x86_64       │ us-west-2b        ║
║ r5.large │ 0.0446 │ Linux/UNIX │ x86_64       │ us-west-2d        ║
║ c4.large │ 0.0464 │ Linux/UNIX │ x86_64       │ us-east-1f        ║
║ c4.large │ 0.0472 │ Linux/UNIX │ x86_64       │ us-west-1b        ║
║ r5.large │ 0.0485 │ Linux/UNIX │ x86_64       │ us-west-1b        ║
║ c4.large │ 0.0493 │ Linux/UNIX │ x86_64       │ us-east-1e        ║
║ c4.large │ 0.0506 │ Linux/UNIX │ x86_64       │ us-east-1d        ║
║ c4.large │ 0.0515 │ Linux/UNIX │ x86_64       │ us-west-1c        ║
║ c4.large │ 0.0531 │ Linux/UNIX │ x86_64       │ us-east-1a        ║
║ r5.large │ 0.0534 │ Linux/UNIX │ x86_64       │ us-west-2c        ║
║ r5.large │ 0.0545 │ Linux/UNIX │ x86_64       │ us-west-2a        ║
║ c4.large │ 0.0554 │ Linux/UNIX │ x86_64       │ us-east-1b        ║
║ r5.large │ 0.0554 │ Linux/UNIX │ x86_64       │ us-east-2c        ║
║ r5.large │ 0.0560 │ Linux/UNIX │ x86_64       │ us-east-2b        ║
║ r5.large │ 0.0560 │ Linux/UNIX │ x86_64       │ us-west-2b        ║
║ c4.large │ 0.0575 │ Linux/UNIX │ x86_64       │ us-east-1c        ║
║ r5.large │ 0.0618 │ Linux/UNIX │ x86_64       │ us-east-2a        ║
║ r5.large │ 0.0621 │ Linux/UNIX │ x86_64       │ us-west-1c        ║
║ r5.large │ 0.0626 │ Linux/UNIX │ x86_64       │ us-east-1a        ║
║ r5.large │ 0.0650 │ Linux/UNIX │ x86_64       │ us-east-1c        ║
║ r5.large │ 0.0653 │ Linux/UNIX │ x86_64       │ us-east-1b        ║
║ r5.large │ 0.0668 │ Linux/UNIX │ x86_64       │ us-east-1f        ║
║ r5.large │ 0.0675 │ Linux/UNIX │ x86_64       │ us-east-1d        ║
║ r5.large │ 0.1006 │ SUSE Linux │ x86_64       │ us-west-2d        ║
║ r5.large │ 0.1045 │ SUSE Linux │ x86_64       │ us-west-1b        ║
║ r5.large │ 0.1094 │ SUSE Linux │ x86_64       │ us-west-2c        ║
║ r5.large │ 0.1105 │ SUSE Linux │ x86_64       │ us-west-2a        ║
║ r5.large │ 0.1114 │ SUSE Linux │ x86_64       │ us-east-2c        ║
║ r5.large │ 0.1120 │ SUSE Linux │ x86_64       │ us-east-2b        ║
║ r5.large │ 0.1120 │ SUSE Linux │ x86_64       │ us-west-2b        ║
║ r5.large │ 0.1178 │ SUSE Linux │ x86_64       │ us-east-2a        ║
║ r5.large │ 0.1181 │ SUSE Linux │ x86_64       │ us-west-1c        ║
║ r5.large │ 0.1186 │ SUSE Linux │ x86_64       │ us-east-1a        ║
║ r5.large │ 0.1210 │ SUSE Linux │ x86_64       │ us-east-1c        ║
║ r5.large │ 0.1213 │ SUSE Linux │ x86_64       │ us-east-1b        ║
║ r5.large │ 0.1228 │ SUSE Linux │ x86_64       │ us-east-1f        ║
║ r5.large │ 0.1235 │ SUSE Linux │ x86_64       │ us-east-1d        ║
║ c4.large │ 0.1344 │ SUSE Linux │ x86_64       │ us-east-2c        ║
║ c4.large │ 0.1353 │ SUSE Linux │ x86_64       │ us-east-2b        ║
║ c4.large │ 0.1376 │ SUSE Linux │ x86_64       │ us-west-2c        ║
║ c4.large │ 0.1379 │ SUSE Linux │ x86_64       │ us-west-2a        ║
║ c4.large │ 0.1382 │ SUSE Linux │ x86_64       │ us-east-2a        ║
║ c4.large │ 0.1389 │ SUSE Linux │ x86_64       │ us-west-2b        ║
║ c4.large │ 0.1464 │ SUSE Linux │ x86_64       │ us-east-1f        ║
║ c4.large │ 0.1472 │ SUSE Linux │ x86_64       │ us-west-1b        ║
║ c4.large │ 0.1493 │ SUSE Linux │ x86_64       │ us-east-1e        ║
║ c4.large │ 0.1506 │ SUSE Linux │ x86_64       │ us-east-1d        ║
║ c4.large │ 0.1515 │ SUSE Linux │ x86_64       │ us-west-1c        ║
║ c4.large │ 0.1531 │ SUSE Linux │ x86_64       │ us-east-1a        ║
║ c4.large │ 0.1554 │ SUSE Linux │ x86_64       │ us-east-1b        ║
║ c4.large │ 0.1575 │ SUSE Linux │ x86_64       │ us-east-1c        ║
╚══════════╧════════╧════════════╧══════════════╧═══════════════════╝
"
`;

exports[`cli test by spawnSync should stdout help screen 1`] = `
"aws-spot-price

get current AWS spot instance prices

Options:
      --version             Show version number                        [boolean]
      --help                Show help                                  [boolean]
      --ui                  Start with UI mode        [boolean] [default: false]
  -r, --region              AWS regions.
          [array] [choices: "us-east-1", "us-east-2", "af-south-1", "ap-east-1",
         "ap-northeast-1", "ap-northeast-2", "ap-northeast-3", "ap-southeast-1",
              "ap-southeast-2", "ap-southeast-3", "ap-southeast-4", "ca-west-1",
         "us-west-1", "us-west-2", "ap-south-1", "ap-south-2", "ap-southeast-5",
     "ca-central-1", "eu-central-1", "eu-central-2", "eu-north-1", "eu-south-1",
            "eu-south-2", "eu-west-1", "eu-west-2", "eu-west-3", "il-central-1",
                                      "me-central-1", "me-south-1", "sa-east-1"]
  -i, --instanceType        EC2 type
           [array] [choices: "a1.medium", "a1.large", "a1.xlarge", "a1.2xlarge",
        "a1.4xlarge", "a1.metal", "t1.micro", "t2.nano", "t2.micro", "t2.small",
      "t2.medium", "t2.large", "t2.xlarge", "t2.2xlarge", "t3.nano", "t3.micro",
     "t3.small", "t3.medium", "t3.large", "t3.xlarge", "t3.2xlarge", "t3a.nano",
              "t3a.micro", "t3a.small", "t3a.medium", "t3a.large", "t3a.xlarge",
              "t3a.2xlarge", "t4g.nano", "t4g.micro", "t4g.small", "t4g.medium",
  "t4g.large", "t4g.xlarge", "t4g.2xlarge", "m1.small", "m1.medium", "m1.large",
  "m1.xlarge", "m2.xlarge", "m2.2xlarge", "m2.4xlarge", "m3.medium", "m3.large",
               "m3.xlarge", "m3.2xlarge", "m4.xlarge", "m4.large", "m4.2xlarge",
            "m4.4xlarge", "m4.10xlarge", "m4.16xlarge", "m5.large", "m5.xlarge",
         "m5.2xlarge", "m5.4xlarge", "m5.8xlarge", "m5.12xlarge", "m5.16xlarge",
            "m5.24xlarge", "m5.metal", "m5a.large", "m5a.xlarge", "m5a.2xlarge",
   "m5a.4xlarge", "m5a.8xlarge", "m5a.12xlarge", "m5a.16xlarge", "m5a.24xlarge",
    "m5ad.large", "m5ad.xlarge", "m5ad.2xlarge", "m5ad.4xlarge", "m5ad.8xlarge",
   "m5ad.12xlarge", "m5ad.16xlarge", "m5ad.24xlarge", "m5d.large", "m5d.xlarge",
    "m5d.2xlarge", "m5d.4xlarge", "m5d.8xlarge", "m5d.12xlarge", "m5d.16xlarge",
       "m5d.24xlarge", "m5d.metal", "m5dn.large", "m5dn.xlarge", "m5dn.2xlarge",
               "m5dn.4xlarge", "m5dn.8xlarge", "m5dn.12xlarge", "m5dn.16xlarge",
        "m5dn.24xlarge", "m5dn.metal", "m5n.large", "m5n.xlarge", "m5n.2xlarge",
   "m5n.4xlarge", "m5n.8xlarge", "m5n.12xlarge", "m5n.16xlarge", "m5n.24xlarge",
       "m5n.metal", "m5zn.large", "m5zn.xlarge", "m5zn.2xlarge", "m5zn.3xlarge",
       "m5zn.6xlarge", "m5zn.12xlarge", "m5zn.metal", "m6a.large", "m6a.xlarge",
    "m6a.2xlarge", "m6a.4xlarge", "m6a.8xlarge", "m6a.12xlarge", "m6a.16xlarge",
      "m6a.24xlarge", "m6a.32xlarge", "m6a.48xlarge", "m6a.metal", "m6g.medium",
         "m6g.large", "m6g.xlarge", "m6g.2xlarge", "m6g.4xlarge", "m6g.8xlarge",
       "m6g.12xlarge", "m6g.16xlarge", "m6g.metal", "m6gd.medium", "m6gd.large",
                  "m6gd.xlarge", "m6gd.2xlarge", "m6gd.4xlarge", "m6gd.8xlarge",
      "m6gd.12xlarge", "m6gd.16xlarge", "m6gd.metal", "m6i.large", "m6i.xlarge",
    "m6i.2xlarge", "m6i.4xlarge", "m6i.8xlarge", "m6i.12xlarge", "m6i.16xlarge",
       "m6i.24xlarge", "m6i.32xlarge", "m6i.metal", "m6id.large", "m6id.xlarge",
                "m6id.2xlarge", "m6id.4xlarge", "m6id.8xlarge", "m6id.12xlarge",
                "m6id.16xlarge", "m6id.24xlarge", "m6id.32xlarge", "m6id.metal",
                "m6idn.large", "m6idn.xlarge", "m6idn.2xlarge", "m6idn.4xlarge",
          "m6idn.8xlarge", "m6idn.12xlarge", "m6idn.16xlarge", "m6idn.24xlarge",
   "m6idn.32xlarge", "m6idn.metal", "m6in.large", "m6in.xlarge", "m6in.2xlarge",
               "m6in.4xlarge", "m6in.8xlarge", "m6in.12xlarge", "m6in.16xlarge",
      "m6in.24xlarge", "m6in.32xlarge", "m6in.metal", "m7a.medium", "m7a.large",
      "m7a.xlarge", "m7a.2xlarge", "m7a.4xlarge", "m7a.8xlarge", "m7a.12xlarge",
                 "m7a.16xlarge", "m7a.24xlarge", "m7a.32xlarge", "m7a.48xlarge",
       "m7a.metal-48xl", "m7g.medium", "m7g.large", "m7g.xlarge", "m7g.2xlarge",
      "m7g.4xlarge", "m7g.8xlarge", "m7g.12xlarge", "m7g.16xlarge", "m7g.metal",
     "m7gd.medium", "m7gd.large", "m7gd.xlarge", "m7gd.2xlarge", "m7gd.4xlarge",
    "m7gd.8xlarge", "m7gd.12xlarge", "m7gd.16xlarge", "m7gd.metal", "m7i.large",
      "m7i.xlarge", "m7i.2xlarge", "m7i.4xlarge", "m7i.8xlarge", "m7i.12xlarge",
               "m7i.16xlarge", "m7i.24xlarge", "m7i.48xlarge", "m7i.metal-24xl",
      "m7i.metal-48xl", "m7i-flex.large", "m7i-flex.xlarge", "m7i-flex.2xlarge",
              "m7i-flex.4xlarge", "m7i-flex.8xlarge", "m8g.medium", "m8g.large",
      "m8g.xlarge", "m8g.2xlarge", "m8g.4xlarge", "m8g.8xlarge", "m8g.12xlarge",
               "m8g.16xlarge", "m8g.24xlarge", "m8g.48xlarge", "m8g.metal-24xl",
             "m8g.metal-48xl", "mac1.metal", "mac2.metal", "mac2-m1ultra.metal",
      "mac2-m2.metal", "mac2-m2pro.metal", "c1.medium", "c1.xlarge", "c3.large",
              "c3.xlarge", "c3.2xlarge", "c3.4xlarge", "c3.8xlarge", "c4.large",
              "c4.xlarge", "c4.2xlarge", "c4.4xlarge", "c4.8xlarge", "c5.large",
           "c5.xlarge", "c5.2xlarge", "c5.4xlarge", "c5.9xlarge", "c5.12xlarge",
            "c5.18xlarge", "c5.24xlarge", "c5.metal", "c5a.large", "c5a.xlarge",
    "c5a.2xlarge", "c5a.4xlarge", "c5a.8xlarge", "c5a.12xlarge", "c5a.16xlarge",
    "c5a.24xlarge", "c5ad.large", "c5ad.xlarge", "c5ad.2xlarge", "c5ad.4xlarge",
              "c5ad.8xlarge", "c5ad.12xlarge", "c5ad.16xlarge", "c5ad.24xlarge",
         "c5d.large", "c5d.xlarge", "c5d.2xlarge", "c5d.4xlarge", "c5d.9xlarge",
       "c5d.12xlarge", "c5d.18xlarge", "c5d.24xlarge", "c5d.metal", "c5n.large",
      "c5n.xlarge", "c5n.2xlarge", "c5n.4xlarge", "c5n.9xlarge", "c5n.18xlarge",
           "c5n.metal", "c6a.large", "c6a.xlarge", "c6a.2xlarge", "c6a.4xlarge",
  "c6a.8xlarge", "c6a.12xlarge", "c6a.16xlarge", "c6a.24xlarge", "c6a.32xlarge",
           "c6a.48xlarge", "c6a.metal", "c6g.medium", "c6g.large", "c6g.xlarge",
    "c6g.2xlarge", "c6g.4xlarge", "c6g.8xlarge", "c6g.12xlarge", "c6g.16xlarge",
        "c6g.metal", "c6gd.medium", "c6gd.large", "c6gd.xlarge", "c6gd.2xlarge",
               "c6gd.4xlarge", "c6gd.8xlarge", "c6gd.12xlarge", "c6gd.16xlarge",
       "c6gd.metal", "c6gn.medium", "c6gn.large", "c6gn.xlarge", "c6gn.2xlarge",
  "c6gn.4xlarge", "c6gn.8xlarge", "c6gn.12xlarge", "c6gn.16xlarge", "c6i.large",
      "c6i.xlarge", "c6i.2xlarge", "c6i.4xlarge", "c6i.8xlarge", "c6i.12xlarge",
      "c6i.16xlarge", "c6i.24xlarge", "c6i.32xlarge", "c6i.metal", "c6id.large",
                  "c6id.xlarge", "c6id.2xlarge", "c6id.4xlarge", "c6id.8xlarge",
             "c6id.12xlarge", "c6id.16xlarge", "c6id.24xlarge", "c6id.32xlarge",
      "c6id.metal", "c6in.large", "c6in.xlarge", "c6in.2xlarge", "c6in.4xlarge",
              "c6in.8xlarge", "c6in.12xlarge", "c6in.16xlarge", "c6in.24xlarge",
         "c6in.32xlarge", "c6in.metal", "c7a.medium", "c7a.large", "c7a.xlarge",
    "c7a.2xlarge", "c7a.4xlarge", "c7a.8xlarge", "c7a.12xlarge", "c7a.16xlarge",
               "c7a.24xlarge", "c7a.32xlarge", "c7a.48xlarge", "c7a.metal-48xl",
          "c7g.medium", "c7g.large", "c7g.xlarge", "c7g.2xlarge", "c7g.4xlarge",
      "c7g.8xlarge", "c7g.12xlarge", "c7g.16xlarge", "c7g.metal", "c7gd.medium",
    "c7gd.large", "c7gd.xlarge", "c7gd.2xlarge", "c7gd.4xlarge", "c7gd.8xlarge",
    "c7gd.12xlarge", "c7gd.16xlarge", "c7gd.metal", "c7gn.medium", "c7gn.large",
                  "c7gn.xlarge", "c7gn.2xlarge", "c7gn.4xlarge", "c7gn.8xlarge",
      "c7gn.12xlarge", "c7gn.16xlarge", "c7gn.metal", "c7i.large", "c7i.xlarge",
    "c7i.2xlarge", "c7i.4xlarge", "c7i.8xlarge", "c7i.12xlarge", "c7i.16xlarge",
             "c7i.24xlarge", "c7i.48xlarge", "c7i.metal-24xl", "c7i.metal-48xl",
    "c7i-flex.large", "c7i-flex.xlarge", "c7i-flex.2xlarge", "c7i-flex.4xlarge",
     "c7i-flex.8xlarge", "c8g.medium", "c8g.large", "c8g.xlarge", "c8g.2xlarge",
   "c8g.4xlarge", "c8g.8xlarge", "c8g.12xlarge", "c8g.16xlarge", "c8g.24xlarge",
              "c8g.48xlarge", "c8g.metal-24xl", "c8g.metal-48xl", "cc1.4xlarge",
             "cc2.8xlarge", "r3.large", "r3.xlarge", "r3.2xlarge", "r3.4xlarge",
              "r3.8xlarge", "r4.large", "r4.xlarge", "r4.2xlarge", "r4.4xlarge",
             "r4.8xlarge", "r4.16xlarge", "r5.large", "r5.xlarge", "r5.2xlarge",
        "r5.4xlarge", "r5.8xlarge", "r5.12xlarge", "r5.16xlarge", "r5.24xlarge",
            "r5.metal", "r5a.large", "r5a.xlarge", "r5a.2xlarge", "r5a.4xlarge",
    "r5a.8xlarge", "r5a.12xlarge", "r5a.16xlarge", "r5a.24xlarge", "r5ad.large",
                  "r5ad.xlarge", "r5ad.2xlarge", "r5ad.4xlarge", "r5ad.8xlarge",
   "r5ad.12xlarge", "r5ad.16xlarge", "r5ad.24xlarge", "r5b.large", "r5b.xlarge",
    "r5b.2xlarge", "r5b.4xlarge", "r5b.8xlarge", "r5b.12xlarge", "r5b.16xlarge",
          "r5b.24xlarge", "r5b.metal", "r5d.large", "r5d.xlarge", "r5d.2xlarge",
   "r5d.4xlarge", "r5d.8xlarge", "r5d.12xlarge", "r5d.16xlarge", "r5d.24xlarge",
       "r5d.metal", "r5dn.large", "r5dn.xlarge", "r5dn.2xlarge", "r5dn.4xlarge",
              "r5dn.8xlarge", "r5dn.12xlarge", "r5dn.16xlarge", "r5dn.24xlarge",
          "r5dn.metal", "r5n.large", "r5n.xlarge", "r5n.2xlarge", "r5n.4xlarge",
     "r5n.8xlarge", "r5n.12xlarge", "r5n.16xlarge", "r5n.24xlarge", "r5n.metal",
         "r6a.xlarge", "r6a.large", "r6a.2xlarge", "r6a.4xlarge", "r6a.8xlarge",
                 "r6a.12xlarge", "r6a.16xlarge", "r6a.24xlarge", "r6a.32xlarge",
           "r6a.48xlarge", "r6a.metal", "r6g.medium", "r6g.large", "r6g.xlarge",
    "r6g.2xlarge", "r6g.4xlarge", "r6g.8xlarge", "r6g.12xlarge", "r6g.16xlarge",
        "r6g.metal", "r6gd.medium", "r6gd.large", "r6gd.xlarge", "r6gd.2xlarge",
               "r6gd.4xlarge", "r6gd.8xlarge", "r6gd.12xlarge", "r6gd.16xlarge",
          "r6gd.metal", "r6i.large", "r6i.xlarge", "r6i.2xlarge", "r6i.4xlarge",
  "r6i.8xlarge", "r6i.12xlarge", "r6i.16xlarge", "r6i.24xlarge", "r6i.32xlarge",
       "r6i.metal", "r6id.large", "r6id.xlarge", "r6id.2xlarge", "r6id.4xlarge",
              "r6id.8xlarge", "r6id.12xlarge", "r6id.16xlarge", "r6id.24xlarge",
  "r6id.32xlarge", "r6id.metal", "r6idn.large", "r6idn.xlarge", "r6idn.2xlarge",
           "r6idn.4xlarge", "r6idn.8xlarge", "r6idn.12xlarge", "r6idn.16xlarge",
                "r6idn.24xlarge", "r6idn.32xlarge", "r6idn.metal", "r6in.large",
                  "r6in.xlarge", "r6in.2xlarge", "r6in.4xlarge", "r6in.8xlarge",
             "r6in.12xlarge", "r6in.16xlarge", "r6in.24xlarge", "r6in.32xlarge",
           "r6in.metal", "r7a.medium", "r7a.large", "r7a.xlarge", "r7a.2xlarge",
   "r7a.4xlarge", "r7a.8xlarge", "r7a.12xlarge", "r7a.16xlarge", "r7a.24xlarge",
    "r7a.32xlarge", "r7a.48xlarge", "r7a.metal-48xl", "r7g.medium", "r7g.large",
      "r7g.xlarge", "r7g.2xlarge", "r7g.4xlarge", "r7g.8xlarge", "r7g.12xlarge",
        "r7g.16xlarge", "r7g.metal", "r7gd.medium", "r7gd.large", "r7gd.xlarge",
                "r7gd.2xlarge", "r7gd.4xlarge", "r7gd.8xlarge", "r7gd.12xlarge",
        "r7gd.16xlarge", "r7gd.metal", "r7i.large", "r7i.xlarge", "r7i.2xlarge",
   "r7i.4xlarge", "r7i.8xlarge", "r7i.12xlarge", "r7i.16xlarge", "r7i.24xlarge",
               "r7i.48xlarge", "r7i.metal-24xl", "r7i.metal-48xl", "r7iz.large",
                  "r7iz.xlarge", "r7iz.2xlarge", "r7iz.4xlarge", "r7iz.8xlarge",
           "r7iz.12xlarge", "r7iz.16xlarge", "r7iz.32xlarge", "r7iz.metal-16xl",
      "r7iz.metal-32xl", "r8g.medium", "r8g.large", "r8g.xlarge", "r8g.2xlarge",
   "r8g.4xlarge", "r8g.8xlarge", "r8g.12xlarge", "r8g.16xlarge", "r8g.24xlarge",
        "r8g.48xlarge", "r8g.metal-24xl", "r8g.metal-48xl", "u-12tb1.112xlarge",
     "u-12tb1.metal", "u-18tb1.112xlarge", "u-18tb1.metal", "u-24tb1.112xlarge",
      "u-24tb1.metal", "u-3tb1.56xlarge", "u-6tb1.56xlarge", "u-6tb1.112xlarge",
       "u-6tb1.metal", "u-9tb1.112xlarge", "u-9tb1.metal", "u7i-12tb.224xlarge",
            "u7ib-12tb.224xlarge", "u7in-16tb.224xlarge", "u7in-24tb.224xlarge",
              "u7in-32tb.224xlarge", "x1.16xlarge", "x1.32xlarge", "x1e.xlarge",
    "x1e.2xlarge", "x1e.4xlarge", "x1e.8xlarge", "x1e.16xlarge", "x1e.32xlarge",
     "x2gd.medium", "x2gd.large", "x2gd.xlarge", "x2gd.2xlarge", "x2gd.4xlarge",
                 "x2gd.8xlarge", "x2gd.12xlarge", "x2gd.16xlarge", "x2gd.metal",
            "x2idn.16xlarge", "x2idn.24xlarge", "x2idn.32xlarge", "x2idn.metal",
          "x2iedn.xlarge", "x2iedn.2xlarge", "x2iedn.4xlarge", "x2iedn.8xlarge",
        "x2iedn.16xlarge", "x2iedn.24xlarge", "x2iedn.32xlarge", "x2iedn.metal",
         "x2iezn.2xlarge", "x2iezn.4xlarge", "x2iezn.6xlarge", "x2iezn.8xlarge",
     "x2iezn.12xlarge", "x2iezn.metal", "x8g.medium", "x8g.large", "x8g.xlarge",
    "x8g.2xlarge", "x8g.4xlarge", "x8g.8xlarge", "x8g.12xlarge", "x8g.16xlarge",
             "x8g.24xlarge", "x8g.48xlarge", "x8g.metal-24xl", "x8g.metal-48xl",
         "z1d.large", "z1d.xlarge", "z1d.2xlarge", "z1d.3xlarge", "z1d.6xlarge",
          "z1d.12xlarge", "z1d.metal", "cr1.8xlarge", "d2.xlarge", "d2.2xlarge",
            "d2.4xlarge", "d2.8xlarge", "d3.xlarge", "d3.2xlarge", "d3.4xlarge",
    "d3.8xlarge", "d3en.xlarge", "d3en.2xlarge", "d3en.4xlarge", "d3en.6xlarge",
      "d3en.8xlarge", "d3en.12xlarge", "h1.2xlarge", "h1.4xlarge", "h1.8xlarge",
         "h1.16xlarge", "hi1.4xlarge", "hs1.8xlarge", "i2.xlarge", "i2.2xlarge",
              "i2.4xlarge", "i2.8xlarge", "i3.large", "i3.xlarge", "i3.2xlarge",
            "i3.4xlarge", "i3.8xlarge", "i3.16xlarge", "i3.metal", "i3en.large",
                  "i3en.xlarge", "i3en.2xlarge", "i3en.3xlarge", "i3en.6xlarge",
      "i3en.12xlarge", "i3en.24xlarge", "i3en.metal", "i4g.large", "i4g.xlarge",
       "i4g.2xlarge", "i4g.4xlarge", "i4g.8xlarge", "i4g.16xlarge", "i4i.large",
      "i4i.xlarge", "i4i.2xlarge", "i4i.4xlarge", "i4i.8xlarge", "i4i.12xlarge",
     "i4i.16xlarge", "i4i.24xlarge", "i4i.32xlarge", "i4i.metal", "im4gn.large",
              "im4gn.xlarge", "im4gn.2xlarge", "im4gn.4xlarge", "im4gn.8xlarge",
             "im4gn.16xlarge", "is4gen.medium", "is4gen.large", "is4gen.xlarge",
           "is4gen.2xlarge", "is4gen.4xlarge", "is4gen.8xlarge", "dl1.24xlarge",
       "dl2q.24xlarge", "f1.2xlarge", "f1.4xlarge", "f1.16xlarge", "g2.2xlarge",
          "g2.8xlarge", "g3.4xlarge", "g3.8xlarge", "g3.16xlarge", "g3s.xlarge",
                  "g4ad.xlarge", "g4ad.2xlarge", "g4ad.4xlarge", "g4ad.8xlarge",
                 "g4ad.16xlarge", "g4dn.xlarge", "g4dn.2xlarge", "g4dn.4xlarge",
    "g4dn.8xlarge", "g4dn.12xlarge", "g4dn.16xlarge", "g4dn.metal", "g5.xlarge",
         "g5.2xlarge", "g5.4xlarge", "g5.8xlarge", "g5.12xlarge", "g5.16xlarge",
       "g5.24xlarge", "g5.48xlarge", "g5g.xlarge", "g5g.2xlarge", "g5g.4xlarge",
          "g5g.8xlarge", "g5g.16xlarge", "g5g.metal", "g6.xlarge", "g6.2xlarge",
        "g6.4xlarge", "g6.8xlarge", "g6.12xlarge", "g6.16xlarge", "g6.24xlarge",
       "g6.48xlarge", "g6e.xlarge", "g6e.2xlarge", "g6e.4xlarge", "g6e.8xlarge",
  "g6e.12xlarge", "g6e.16xlarge", "g6e.24xlarge", "g6e.48xlarge", "gr6.4xlarge",
  "gr6.8xlarge", "inf1.xlarge", "inf1.2xlarge", "inf1.6xlarge", "inf1.24xlarge",
   "inf2.xlarge", "inf2.8xlarge", "inf2.24xlarge", "inf2.48xlarge", "p2.xlarge",
         "p2.8xlarge", "p2.16xlarge", "p3.2xlarge", "p3.8xlarge", "p3.16xlarge",
                "p3dn.24xlarge", "p4d.24xlarge", "p4de.24xlarge", "p5.48xlarge",
               "trn1.2xlarge", "trn1.32xlarge", "trn1n.32xlarge", "vt1.3xlarge",
                 "vt1.6xlarge", "vt1.24xlarge", "cg1.4xlarge", "hpc6a.48xlarge",
        "hpc6id.32xlarge", "hpc7a.12xlarge", "hpc7a.24xlarge", "hpc7a.48xlarge",
           "hpc7a.96xlarge", "hpc7g.4xlarge", "hpc7g.8xlarge", "hpc7g.16xlarge"]
      --family              EC2 instance family.
                    [array] [choices: "general", "compute", "memory", "storage",
                                         "acceleratedComputing", "hpcOptimized"]
  -f, --familyType          EC2 instance family types.
       [array] [choices: "a1", "t1", "t2", "t3", "t3a", "t4g", "m1", "m2", "m3",
  "m4", "m5", "m5a", "m5ad", "m5d", "m5dn", "m5n", "m5zn", "m6a", "m6g", "m6gd",
        "m6i", "m6id", "m6idn", "m6in", "m7a", "m7g", "m7gd", "m7i", "m7i-flex",
     "m8g", "mac1", "mac2", "mac2-m1ultra", "mac2-m2", "mac2-m2pro", "c1", "c3",
   "c4", "c5", "c5a", "c5ad", "c5d", "c5n", "c6a", "c6g", "c6gd", "c6gn", "c6i",
  "c6id", "c6in", "c7a", "c7g", "c7gd", "c7gn", "c7i", "c7i-flex", "c8g", "cc1",
     "cc2", "r3", "r4", "r5", "r5a", "r5ad", "r5b", "r5d", "r5dn", "r5n", "r6a",
     "r6g", "r6gd", "r6i", "r6id", "r6idn", "r6in", "r7a", "r7g", "r7gd", "r7i",
   "r7iz", "r8g", "u-12tb1", "u-18tb1", "u-24tb1", "u-3tb1", "u-6tb1", "u-9tb1",
    "u7i-12tb", "u7ib-12tb", "u7in-16tb", "u7in-24tb", "u7in-32tb", "x1", "x1e",
   "x2gd", "x2idn", "x2iedn", "x2iezn", "x8g", "z1d", "cr1", "d2", "d3", "d3en",
        "h1", "hi1", "hs1", "i2", "i3", "i3en", "i4g", "i4i", "im4gn", "is4gen",
      "dl1", "dl2q", "f1", "g2", "g3", "g3s", "g4ad", "g4dn", "g5", "g5g", "g6",
  "g6e", "gr6", "inf1", "inf2", "p2", "p3", "p3dn", "p4d", "p4de", "p5", "trn1",
                     "trn1n", "vt1", "cg1", "hpc6a", "hpc6id", "hpc7a", "hpc7g"]
  -s, --size                EC2 instance sizes.
        [array] [choices: "nano", "micro", "small", "medium", "large", "xlarge",
   "2xlarge", "3xlarge", "4xlarge", "6xlarge", "8xlarge", "9xlarge", "10xlarge",
         "12xlarge", "16xlarge", "18xlarge", "24xlarge", "32xlarge", "48xlarge",
        "56xlarge", "96xlarge", "112xlarge", "224xlarge", "metal", "metal-16xl",
                                       "metal-24xl", "metal-32xl", "metal-48xl"]
      --minVCPU, --mc       Minimum VCPU count             [number] [default: 1]
      --minMemoryGiB, --mm  Minimum memory (GiB)         [number] [default: 0.5]
      --priceLimit, --pl    Maximum price limit          [number] [default: 100]
  -p, --platforms           Platforms. Choose \`windows\` or \`linux\` (all
                            lowercase) as wildcard.
  [array] [choices: "Linux/UNIX", "Linux/UNIX (Amazon VPC)", "SUSE Linux", "SUSE
      Linux (Amazon VPC)", "Red Hat Enterprise Linux", "Red Hat Enterprise Linux
           (Amazon VPC)", "Windows", "Windows (Amazon VPC)", "linux", "windows"]
                             [default: ["Linux/UNIX","Linux/UNIX (Amazon VPC)"]]
  -a, --architectures       Architectures
         [array] [choices: "arm64", "arm64_mac", "i386", "x86_64", "x86_64_mac"]
                   [default: ["arm64","arm64_mac","i386","x86_64","x86_64_mac"]]
  -l, --limit               Limit results output length   [number] [default: 30]
      --reduceAZ, --raz     Reduce results with cheapest Availability Zone
                            within Region              [boolean] [default: true]
  -w, --wide                Output results with detail (vCPU, memory, etc)
                                                      [boolean] [default: false]
  -j, --json                Outputs in JSON format    [boolean] [default: false]
      --accessKeyId         AWS Access Key ID.                          [string]
      --secretAccessKey     AWS Secret Access Key.                      [string]
"
`;
